# Copyright 2023 Sophos Limited. All rights reserved.
load("//tools/config:sophos_stage_files.bzl", "soph_export_assets")
load("@bazel_skylib//lib:selects.bzl", "selects")

COMMON_DEPS = [
    "//base:installer",
    "//base:system_test",
    "//eventjournaler:installer",
    "//eventjournaler:manualTools",
    "//response_actions:installer",
    "//liveterminal:installer",
    "//edr:installer",
    "//edr:componenttests",
    "//av:installer",
    "//av:tap_test_output",
]

RELEASE_DEPS = [
    "//base:installer_symbols",
    "//eventjournaler:installer_symbols",
    "//response_actions:installer_symbols",
    "//liveterminal:installer_symbols",
    "//edr:installer_symbols",
    "//av:installer_symbols",
]

soph_export_assets(
    name = "export_assets",
    output_folder = ".output",
    release_package = "//build:release-package.xml",
    deps = select({
        "//tools/config:linux_x64_rel": COMMON_DEPS + RELEASE_DEPS + [
            "//base:fake_management",
            "//thininstaller",
        ],
        "//tools/config:linux_arm64_rel": COMMON_DEPS + RELEASE_DEPS,
        "//tools/config:linux_x64_dbg": COMMON_DEPS,
        "//tools/config:linux_arm64_dbg": COMMON_DEPS,
    }),
)
