# Copyright 2023-2024 Sophos Limited. All rights reserved.
load("//tools/config:sophos_asset.bzl", "soph_build_asset", "soph_release_asset")
load("//tools/config:sophos_versioning.bzl", "version_info")
load("@bazel_skylib//lib:selects.bzl", "selects")

version_info(
    name = "version_info",
    base_version = "1.0.2",
    component_name = "responseactions",
    visibility = [
        "//base/modules/ResponseActions:__subpackages__",
        "//base/products/ResponseActions:__subpackages__",
    ],
)

soph_release_asset(
    name = "installer",
    asset = "//base/products/ResponseActions/installer:installer_sdds2",
    asset_type = selects.with_or({
        ("//tools/config:linux_x64_rel", "//tools/config:linux_arm64_rel"): "release",
        ("//tools/config:linux_x64_dbg", "//tools/config:linux_arm64_dbg"): "build",
    }),
    visibility = ["//products:__pkg__"],
)

soph_build_asset(
    name = "installer_symbols",
    asset = "//base/products/ResponseActions/installer:installer_symbols",
    visibility = ["//products:__pkg__"],
)
